# BiliCrawler

./: .dockerignore  .gitignore  B站cookie.example.txt  Dockerfile  README.md  config.example.yaml  convert_bili_cookie.py  convert_cookie.py  docker-compose.yml  pyproject.toml  requirements.txt  抖音cookie.example.txt
bili_crawler/: __init__.py  __main__.py
bili_crawler/config/: __init__.py  settings.py
bili_crawler/crawlers/: __init__.py  base.py  batch.py  comment.py  danmaku.py  douyin.py
bili_crawler/exporters/: __init__.py  base.py  csv_exporter.py  json_exporter.py
bili_crawler/models/: __init__.py  comment.py  danmaku.py  douyin_comment.py  task.py
bili_crawler/utils/: anti_crawl.py  douyin_parse.py  douyin_sign.py  exceptions.py  http.py  logger.py  parse.py  protobuf.py  wbi.py
bili_crawler/web/: __init__.py  app.py  task_manager.py
bili_crawler/web/static/css/: style.css
bili_crawler/web/static/js/: app.js
bili_crawler/web/templates/: base.html  batch.html  export.html  tasks.html  video.html
js/: douyin_sign_worker.js
tests/: douyin_smoke.py  smoke.py
